--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>On the Grid</title>
+    <title>A Better Edit Button</title>
     <meta name="description" content="Possibly the most insightful presentation of all time" />
 
     <link rel="stylesheet" href="decky.css">
